[package]
name = "warmup1"
version = "0.1.0"
authors = ["Yichi Zhang <zhangyichi9604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.19"
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }
hex = "0.4.2"
log = "0.4.14"
